# industrial-iot-technical-agent

./: .env.example  .gitignore  README.md  docker-compose.yml  plan.md  pyproject.toml  requirements.txt  role.md
app/: config.py  dependencies.py  main.py
app/agents/: maintenance_agent.py  prompts.py  state.py  workflow.py
app/api/: routes_health.py  routes_upload.py  schemas.py
app/db/: queries.py  session.py
app/scripts/: generate_dummy_data.py
app/services/: document_service.py
app/tools/: safety_tool.py  vision_tool.py
app/utils/: logging.py  text_cleaning.py
apps/monitoring-ui/: README.md  package.json
data/sample_images/: README.md
data/sample_manuals/: plc_manual_sample.md
data/seed/: machines.csv  maintenance_history.csv
database/: schema.sql  seed.sql
docs/: agent_design.md  architecture.md  database_schema.md  demo_script.md  n8n_workflows.md
frontend/: __init__.py
frontend/components/: chat_box.py
infrastructure/redis/: README.md
ingestion/: chunk_documents.py  ingest_documents.py  load_docs.py  load_pdf.py
n8n/payload_examples/: escalation_payload.json  incident_payload.json
n8n/workflows/: incident_logging.json
nextjs/: .dockerignore  next-env.d.ts  package.json
nextjs/app/: page.tsx
nextjs/lib/: api.ts
nextjs/types/: agent.ts
role-1/: task.md
role-1/docs/: ai_agent_design.md  evaluation_plan.md  rag_pipeline.md
role-2/: task.md
role-2/docs/: api_contract.md  database_schema.md  demo_script.md  (+1 more)
scripts/: bootstrap.sh  run_local.sh  run_tests.sh
tests/: test_rag_tool.py  test_vision_tool.py
(+120 files in other folders)
